# Nori

./: .gitattributes  .gitignore  CLAUDE.md  README.md  api_config.example.yaml  main.py  pyproject.toml  进度.md
.cc-branch/: config.yaml  config.yaml.bak  state.yaml  state.yaml.bak
backend/: README.md  __init__.py  app.py  assets.py  content.py  contracts.py  experiments.py  facade.py  fixtures.py  job_presenters.py  jobs.py  reference_urls.py  route_services.py  routing.py  server.py  workflows.py
cases/: README.md
data_collect/: README.md  __init__.py  adapter.py
data_collect/sign/: Dockerfile  app.py  config.py  context_vars.py  pyproject.toml  urls.py
data_collect/sign/apis/: base_handler.py  douyin.py  xiaohongshu.py
data_collect/sign/constant/: __init__.py  base_constant.py  error_code.py
data_collect/sign/docs/: xhs-sign-fix-analysis.md
data_collect/sign/logic/douyin/: __init__.py  douyin_logic.py
data_collect/sign/logic/xhs/: __init__.py  help.py  xhs_logic.py
data_collect/sign/params/: base_model.py  douyin_sign.py  xiaohongshu_sign.py
data_collect/sign/pkg/cache/: abs_cache.py  cache_factory.py  local_cache.py
data_collect/sign/pkg/custom_exceptions/: __init__.py  base_exceptions.py
data_collect/sign/pkg/js/xhs/: xhs_encrpty_test.py  xhs_xs_new.js
data_collect/sign/pkg/playwright/: douyin_manager.py  manager.py  xhs_manager.py
data_collect/sign/pkg/utils/: __init__.py  base_utils.py  crawler_util.py
data_collect/sign/test/: __init__.py  test_custom_getenv.py
llms/: README.md  __init__.py  call.py  capabilities.py  chat_runner.py  client.py  config.py  errors.py  image_inputs.py  image_providers.py  image_runner.py  intent_extractor.py  json_calls.py  json_parser.py  mode.py  request_params.py  results.py  target_selector.py  (+5 more)
(+1131 files in other folders)
